fix layout shift

--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -9,7 +9,8 @@ label + .radio-wrapper {
 }
 
 .radio-inner {
-    border: 1px solid var(--stroke-default);
+    border: 2px solid transparent;
+    outline: 1px solid var(--stroke-default);
     border-radius: 0.5rem;
 
     display: grid;
@@ -41,7 +42,8 @@ label + .radio-wrapper {
 
     &:hover,
     &:focus-within {
-        border: 1px solid var(--stroke-highlight);
+        border: 2px solid transparent;
+        outline: 1px solid var(--stroke-highlight);
 
         & .radio-image {
             background-image: url('../../assets/radio-hover.svg');
